SERVER-21681: Use cursor statistics to derive index sizes for inMemory